added MAC as id + changed const to define

--- a/bme_280_mqtt_test/platformio.ini
+++ b/bme_280_mqtt_test/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = ttgo-lora32-v21
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit BME280 Library@^2.2.4
 	knolleary/PubSubClient@^2.8
