--- a/bme_280_mqtt_test/platformio.ini
+++ b/bme_280_mqtt_test/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.2.0
 	mikalhart/TinyGPSPlus@^1.1.0
+	adafruit/ENS160 - Adafruit Fork@^3.0.1
